ASM-738 - Fixes for Sonar violations.